--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -4,25 +4,39 @@
     </h1>
 </div>
 
-<button class="btn btn-primary" ng-click="incrementa()">
+<p ng-show="mensagem.texto">
+    {{mensagem.texto}}
+</p>
+
+<a ng-href="#/contato" class="btn btn-primary">
     Novo
-</button>
+</a>
+
 <input ng-model="filtro" type="search" placeholder="parte do nome">
-<p>Contatos cadastrados: {{total}}</p>
+
+<p ng-show="contatos.length">
+    Contatos cadastrados: {{contatos.length}}
+</p>
+<p class="text-info" ng-hide="contatos.length">
+    Não há contatos cadastrados
+</p>
+
 <div class="table-responsive"> 
     <table class="table table-hover">
         <tr>
             <th>NOME</th>
             <th>E-MAIL</th>
+            <th>Emergência</th>
             <th class="text-center">Ação</th>
         </tr>
         <tr ng-repeat="contato in contatos | filter: filtro">
             <td>
-                <a>{{contato.nome}}</a>
+                <a ng-href="#/contato/{{contato._id}}">{{contato.nome}}</a>
             </td>
             <td>{{contato.email}}</td>
+            <td>{{contato.emergencia.nome}}</td>
             <td class="text-center">
-                <button class="btn btn-warning">
+                <button ng-click="remove(contato)" class="btn btn-warning">
                     Remover
                 </button>
             </td>
